--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MoviePoster"></activity>
+        <activity android:name=".FavoriteList"></activity>
+        <activity android:name=".MoviePoster" />
         <activity android:name=".activity_poster" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".MainActivity">
